@@ -1,0 +1,20 @@
+"""Ptah 0.3.0 changes
+
+Revision ID: 0301
+Revises: None
+Create Date: 2012-01-10 10:53:51.715491
+
+"""
+
+# downgrade revision identifier, used by Alembic.
+down_revision = None
+
+from alembic import op
+import sqlalchemy as sa
+
+
+def upgrade():
+    pass
+
+def downgrade():
+    pass
